feat:update the website

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<main class="min-h-screen w-full font-poppins bg-[#eaecf0]">
-  <header class="w-full px-8 py-12 bg-[#F71579]"></header>
-  <section class="">
-    <h1 class="text-center text-4xl">All restaurants</h1>
-  </section>
-</main>
+<app-homepage></app-homepage>
