--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,6 +1,43 @@
-<main class="min-h-screen w-full font-poppins bg-[#eaecf0]">
+<main class="min-h-screen w-full pb-8 font-poppins bg-[#eaecf0]">
   <header class="w-full px-8 py-12 bg-[#F71579]"></header>
-  <section class="">
-    <h1 class="text-center text-4xl">All restaurants</h1>
+  <section class="flex flex-col gap-8">
+    <h1 class="text-center text-4xl capitalize">All restaurants</h1>
+    <div class="flex-grow px-10 h-full border border-red-900 w-full">
+      <div class="grid grid-cols-restaurant gap-6">
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card
+        ><app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card>
+        <app-restaurant-card></app-restaurant-card
+        ><app-restaurant-card></app-restaurant-card>
+      </div>
+    </div>
   </section>
 </main>
