feat:create the page

--- a/src/app/restaurant-card/restaurant-card.component.html
+++ b/src/app/restaurant-card/restaurant-card.component.html
@@ -1,5 +1,6 @@
 <div
   class="border cursor-pointer font-poppins min-w-0 shadow-outline bg-white rounded-xl overflow-hidden"
+  (click)="onClick('hello')"
 >
   <div
     class="min-h-[14rem] w-full flex items-center justify-center bg-cover bg-center bg-no-repeat"
