feat:updat the website

--- a/src/app/restaurant-card/restaurant-card.component.html
+++ b/src/app/restaurant-card/restaurant-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="border cursor-pointer font-poppins min-w-0 shadow-outline bg-white rounded-xl overflow-hidden"
+  class="border cursor-pointer font-montserrat min-w-0 shadow-outline bg-white rounded-xl overflow-hidden"
   (click)="onClick('hello')"
 >
   <div
