--- a/src/app/restaurant-card/restaurant-card.component.html
+++ b/src/app/restaurant-card/restaurant-card.component.html
@@ -1,15 +1,17 @@
 <div
-  class="border cursor-pointer font-montserrat min-w-0 shadow-outline bg-white rounded-xl overflow-hidden"
-  (click)="onClick('hello')"
+  class="border flex-grow w-full cursor-pointer font-montserrat min-w-0 shadow-outline bg-white rounded-xl overflow-hidden"
+  (click)="onClick(restaurant.websiteUrl)"
 >
   <div
     class="min-h-[14rem] w-full flex items-center justify-center bg-cover bg-center bg-no-repeat"
     style="
       background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),
-        url('https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8Zm9vZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60');
+        url('{{ restaurant.imageUrl }}');
     "
-  >
-    <p class="text-white font-bold text-xl capitalize">lebene beans</p>
+  ></div>
+  <div class="h-full min-h-[4rem] px-3 flex items-center w-full">
+    <p class="text-black font-semibold text-xl capitalize">
+      {{ restaurant.name }}
+    </p>
   </div>
-  <!-- <div class="h-full min-h-[4rem] px-3 flex items-center w-full"></div> -->
 </div>
